--- a/inc/lib_ft/Makefile
+++ b/inc/lib_ft/Makefile
@@ -1,62 +1,57 @@
+# Color codes
+RED = \033[0;31m
+GREEN = \033[0;32m
+CYAN = \033[0;36m
+YELLOW = \033[0;33m
+BLUE = \033[0;34m
+NOCOLOR = \033[0m
+
+# Compiler and flags
+CC = cc
+CFLAGS = -Wall -Wextra -Werror
+
 # Name of the library
 NAME = libft.a
 
-# Compiler
-CC = cc
-
-# Directory containing the source files
+# Directories
 SRC_DIR = .
+OBJ_DIR = ./obj
 
-# Compiler flags
-CFLAGS = -Wall -Wextra -Werror -g
+# Gather all .c files
+SRC_FILES = $(wildcard $(SRC_DIR)/*.c)
 
-# Source files to be compiled into objects
-SRCS = $(find $(SRC_DIR) -name "*.c")
+# Convert source files to object files
+OBJ_FILES = $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC_FILES))
 
-# Source files for the bonus part
-BONUS_SRCS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
-	ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
-	ft_lstiter.c ft_lstmap.c
+# Header files (in case you need to specify them)
+HEADERS = libft.h ft_printf.h get_next_line.h
 
-# Object files generated from source files
-OBJS = $(SRCS:%.c=$(SRC_DIR)/%.o)
-BONUS_OBJS = $(BONUS_SRCS:%.c=$(SRC_DIR)/%.o)
+# Rule to compile .c into .o
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
+	@mkdir -p $(OBJ_DIR)
+	@$(CC) $(CFLAGS) -c $< -o $@
 
-# Directory containing header files
-INC_DIR = .
+# Create the library from object files
+$(NAME): $(OBJ_FILES)
+	@ar rcs $(NAME) $(OBJ_FILES)
+	@echo "$(YELLOW)Building library...$(NOCOLOR)"
+	@echo "$(GREEN)$(NAME) created successfully.$(NOCOLOR)"
 
-# Rule to compile individual source files into object files
-$(SRC_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) $(CFLAGS) -c $< -o $@
-
-# Rule to create the target library
-$(NAME): $(OBJS)
-	@ar rc $(NAME) $(OBJS)
-	@ranlib $(NAME)
-
-# Rule to build the library
+# Build everything
 all: $(NAME)
 
-#Rule to build the bonus part
-bonus: $(BONUS_OBJS)
-	@ar rc $(NAME) $(BONUS_OBJS)
-	@ranlib $(NAME)
-
-# Rule to remove object files
+# Clean object files
 clean:
-	@rm -f $(OBJS) $(BONUS_OBJS)
+	@rm -rf $(OBJ_DIR)
+	@echo "$(BLUE)Object files removed.$(NOCOLOR)"
 
-# Rule to remove object files and the target library
+# Clean object files and the library
 fclean: clean
-	@rm -f $(NAME) $(BONUS_OBJS)
+	@rm -f $(NAME)
+	@echo "$(BLUE)$(NAME) removed.$(NOCOLOR)"
 
-# Rule to perform a full rebuild
+# Rebuild the library
 re: fclean all
 
-# Default target
-.DEFAULT_GOAL := all
+.PHONY: all clean fclean re
 
-#PHONY
-.PHONY: all bonus clean fclean re
-
-# End of Makefile
